force-app/main/default/objects/Lease_Abstract__c/fields/Bond__c.field-meta.xml
<CustomField>
    <fullName>Bond__c</fullName>
    <label>Bond</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>