force-app/main/default/objects/Lease_Abstract__c/fields/Create_Lease_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Create_Lease_Negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used to create Lease Negotiation when Dish Option Created</description>
    <label>Create Lease Negotiation</label>
    <type>Checkbox</type>
</CustomField>