force-app/main/default/objects/Lease_Abstract__c/fields/Current_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Rent__c</fullName>
    <label>Current Monthly Rent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>