force-app/main/default/objects/Lease_Abstract__c/fields/Divestiture_Site_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site_ID_Text__c</fullName>
    <externalId>true</externalId>
    <label>Divestiture Site ID (Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>