force-app/main/default/objects/Lease_Abstract__c/fields/Due_Diligence_Package__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Due Diligence Package</label>
    <referenceTo>Due_Diligence_Package__c</referenceTo>
    <relationshipLabel>Lease Abstracts</relationshipLabel>
    <relationshipName>Lease_Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>