force-app/main/default/objects/Lease_Abstract__c/fields/Hold_Over_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Over_End_Date__c</fullName>
    <inlineHelpText>Optional if Needed</inlineHelpText>
    <label>Hold Over End Date</label>
    <type>Date</type>
</CustomField>