force-app/main/default/objects/Lease_Abstract__c/fields/Holdover__c.field-meta.xml
<CustomField>
    <fullName>Holdover__c</fullName>
    <inlineHelpText>Optional if Needed.</inlineHelpText>
    <label>Holdover Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>