force-app/main/default/objects/Lease_Abstract__c/fields/Holdover_Clause__c.field-meta.xml
<CustomField>
    <fullName>Holdover_Clause__c</fullName>
    <inlineHelpText>Add  Holdover clause in Lease</inlineHelpText>
    <label>Holdover Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>