force-app/main/default/objects/Lease_Abstract__c/fields/Holdover_Language_in_Lease__c.field-meta.xml
<CustomField>
    <fullName>Holdover_Language_in_Lease__c</fullName>
    <label>Holdover Language in Lease?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>