force-app/main/default/objects/Lease_Abstract__c/fields/HOLDOVER_Rate__c.field-meta.xml
<CustomField>
    <fullName>HOLDOVER_Rate__c</fullName>
    <label>HOLDOVER Rate %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>