force-app/main/default/objects/Lease_Abstract__c/fields/HOLDOVER_rent_increase__c.field-meta.xml
<CustomField>
    <fullName>HOLDOVER_rent_increase__c</fullName>
    <label>HOLDOVER (rent increase)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>