force-app/main/default/objects/Lease_Abstract__c/fields/Landlord_for_MAtching_ID_text__c.field-meta.xml
<CustomField>
    <fullName>Landlord_for_MAtching_ID_text__c</fullName>
    <label>Landlord for MAtching ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>