force-app/main/default/objects/Lease_Abstract__c/fields/Landlord_State__c.field-meta.xml
<CustomField>
    <fullName>Landlord_State__c</fullName>
    <label>Landlord State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>