force-app/main/default/objects/Lease_Abstract__c/fields/Lease_ID_for_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Lease_ID_for_Vendor__c</fullName>
    <label>Lease ID for Vendor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>