force-app/main/default/objects/Lease_Abstract__c/fields/Lease_in_Holdover__c.field-meta.xml
<CustomField>
    <fullName>Lease_in_Holdover__c</fullName>
    <formula>Due_Diligence_Package__r.Lease_in_Holdover__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease in Holdover</label>
    <type>Text</type>
</CustomField>