force-app/main/default/objects/Lease_Abstract__c/fields/Lease_is_in_holdover__c.field-meta.xml
<CustomField>
    <fullName>Lease_is_in_holdover__c</fullName>
    <formula>IF( Lease_in_Holdover__c == &apos;Yes&apos;, True, False)</formula>
    <label>Lease is in holdover</label>
    <type>Checkbox</type>
</CustomField>