force-app/main/default/objects/Lease_Abstract__c/fields/Lease_Negotiation_Vendor_1__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_Vendor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Negotiation Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Abstracts (Lease Negotiation Vendor)</relationshipLabel>
    <relationshipName>Lease_Abstracts2</relationshipName>
    <type>Lookup</type>
</CustomField>