force-app/main/default/objects/Lease_Abstract__c/fields/Lease_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term_End_Date__c</fullName>
    <label>Lease Term End Date</label>
    <type>Date</type>
</CustomField>