force-app/main/default/objects/Lease_Abstract__c/fields/LL_Address__c.field-meta.xml
<CustomField>
    <fullName>LL_Address__c</fullName>
    <formula>Landlord_Entity__r.Mailing_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Address</label>
    <type>Text</type>
</CustomField>