force-app/main/default/objects/Lease_Abstract__c/fields/LL_City__c.field-meta.xml
<CustomField>
    <fullName>LL_City__c</fullName>
    <formula>Landlord_Entity__r.Mailing_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL City</label>
    <type>Text</type>
</CustomField>