force-app/main/default/objects/Lease_Abstract__c/fields/LL_Email__c.field-meta.xml
<CustomField>
    <fullName>LL_Email__c</fullName>
    <formula>Landlord_Entity__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Email</label>
    <type>Text</type>
</CustomField>