force-app/main/default/objects/Lease_Abstract__c/fields/LL_Phone__c.field-meta.xml
<CustomField>
    <fullName>LL_Phone__c</fullName>
    <formula>Landlord_Entity__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Phone</label>
    <type>Text</type>
</CustomField>