force-app/main/default/objects/Lease_Abstract__c/fields/LL_State__c.field-meta.xml
<CustomField>
    <fullName>LL_State__c</fullName>
    <formula>Landlord_Entity__r.Mailing_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL State</label>
    <type>Text</type>
</CustomField>