force-app/main/default/objects/Lease_Abstract__c/fields/LL_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>LL_Zip_Code__c</fullName>
    <formula>Landlord_Entity__r.Mailing_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LL Zip Code</label>
    <type>Text</type>
</CustomField>