force-app/main/default/objects/Lease_Abstract__c/fields/MLA_Flag__c.field-meta.xml
<CustomField>
    <fullName>MLA_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLA Flag</label>
    <type>Checkbox</type>
</CustomField>