force-app/main/default/objects/Lease_Abstract__c/fields/NNR_Notes__c.field-meta.xml
<CustomField>
    <fullName>NNR_Notes__c</fullName>
    <inlineHelpText>Optional If Needed</inlineHelpText>
    <label>NNR Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>