force-app/main/default/objects/Lease_Abstract__c/fields/Region_DivestSite__c.field-meta.xml
<CustomField>
    <fullName>Region_DivestSite__c</fullName>
    <description>Not on the Layout;
The Region(DivestSite) field is created to get the value of the Region from the associated Divestiture Site, through the process builder - Divestiture Site Process</description>
    <label>Region(DivestSite)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>