force-app/main/default/objects/Lease_Abstract__c/fields/Super_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Super_Landlord__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used for the Lease Negotiation process to designate super landlords (landlords with 3 or more associated leases).</inlineHelpText>
    <label>Super Landlord</label>
    <type>Checkbox</type>
</CustomField>