force-app/main/default/objects/Lease_Abstract__c/fields/T_Mo_Unfet_Termination_Rights__c.field-meta.xml
<CustomField>
    <fullName>T_Mo_Unfet_Termination_Rights__c</fullName>
    <label>T-Mo Unfet Termination Rights</label>
    <length>32</length>
    <type>Text</type>
</CustomField>