force-app/main/default/objects/Lease_Abstract__c/fields/T_Mobile_Unfettered_Assig_Right__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Unfettered_Assig_Right__c</fullName>
    <label>T-Mobile Unfettered Assig Right</label>
    <length>32</length>
    <type>Text</type>
</CustomField>