force-app/main/default/objects/Lease_Abstract__c/fields/T_Mobile_Unfettered_Assig_Right_Doc__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Unfettered_Assig_Right_Doc__c</fullName>
    <label>T-Mobile Unfettered Assig Right-Doc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>