force-app/main/default/objects/Lease_Abstract__c/fields/Termination_Option_Days__c.field-meta.xml
<CustomField>
    <fullName>Termination_Option_Days__c</fullName>
    <label>Termination Option Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>