force-app/main/default/objects/Lease_Abstract__c/fields/Termination_Option_s__c.field-meta.xml
<CustomField>
    <fullName>Termination_Option_s__c</fullName>
    <label>Termination Option(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>