force-app/main/default/objects/Lease_Abstract__c/fields/Termination_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Termination_Type_1__c</fullName>
    <label>Termination Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Discretion</fullName>
            </value>
            <value>
                <fullName>Economic</fullName>
            </value>
            <value>
                <fullName>Technological</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>No Term in Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>