force-app/main/default/objects/Lease_Abstract__c/fields/Unres_24_7_Access_Rights_Doc_Sec__c.field-meta.xml
<CustomField>
    <fullName>Unres_24_7_Access_Rights_Doc_Sec__c</fullName>
    <label>Unres 24/7 Access Rights Doc Sec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>