force-app/main/default/objects/Lease_Abstract__c/fields/Vendor_by_Super_LL__c.field-meta.xml
<CustomField>
    <fullName>Vendor_by_Super_LL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor by Super LL</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Abstracts (Vendor by Super LL)</relationshipLabel>
    <relationshipName>Lease_Abstracts1</relationshipName>
    <type>Lookup</type>
</CustomField>