force-app/main/default/objects/Lease_Abstract__c/fields/Vendor_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Site_ID__c</fullName>
    <label>Vendor Site ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>